--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,6 +1,18 @@
+
 <div id ="container">
-    <h1 id="heading">Welcome to Todo App</h1>
-    <input type="button" class="btn" id="reg" value = "Register">
-    <input type="button" class = "btn" id="login" value="login">
+   <h1 id="heading">Welcome to Todo App</h1>
+<input type="button" class="btn" id="reg" value="Register" ng-click = "home.goToRegister()" >
+    <input type="button" class="btn" id="login" value="login">
+
+
+   <div id="mouth">
+   <svg xmlns="http://www.w3.org/2000/svg">
+      <path id="curve" d="M 0 0 C 400 400, 950 400, 1534 0" stroke="white" fill="white"/>
+      
+   </svg>
+   </div>
+      
+  
+   
     
 </div>
