--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,14 +1,28 @@
-<div id="log">
-    <h2 style="color:white;background-color:blue;text-align: center;">login form</h2>
-      <form action="" method="post">
-        <div class="container" align="center">
-        <label for="uid"><font color="white"><b>Login ID</b></font></label>
-        <input style="width:400px; align: center; float:center;" type="text" placeholder="Enter Username" name="uid" required>
-<br>
-         <label for="pswd"><font color="white"><b>Password</b></font></label>
-          <input style="width:400px; align: center;" type="password" placeholder="Enter Password" name="pswd" required>
- <br>
-                <button  style="width:100px; type="submit">Submit</button>
+<div id="log" class="content">
+        <h2>Login</h2>
+      <form action="" name="loginForm">
+        <div class="form-group">
+        <label for="uid" class="control-label"><b>Login ID</b></label>
+        <input class="form-control" type="email" ng-model="log.currentUser.email"  placeholder="Enter Username" name="email" required>
         </div>
+<br>
+<div class="form-group">
+         <label class="control-label" for="pswd"><b>Password</b></label>
+          <input class="form-control" type="password" ng-model="log.currentUser.password" placeholder="Enter Password" name="pswd" required>
+        </div>
+ <br>
+ <div class="form-group">
+        <div class="">
+                <input type="button" ng-click = "log.currentUserData()" value="login" class="btn">
+                </div>
+        </div>
+        </div>
+
+        <div>
+                <span class="error" ng-show = log.invaildUser >User not found please register <a href="#/register"> Register here</a> </span>
+                <span class="error" ng-show =log.invalidPassword >Incorrect password  <a href="#/login"> Login here </a> </span>
+                
+        </div>
+
 </form>
 </div>
