changed some code

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,5 +1,5 @@
 <div id="log" class="content">
-        <h2>Login</h2>
+        <h2 id="logHead" >Login</h2>
       <form action="" name="loginForm">
         <div class="form-group">
         <label for="uid" class="control-label"><b>Login ID</b></label>
