--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,4 +1,4 @@
-h2{
+#logHead{
   color:darkblue;
   font-weight: bold;
   margin-bottom:20px;
@@ -10,7 +10,7 @@ h2{
   background: white;
   padding: 10px;
 }
-span{
+.error{
   background-color:rgb(236, 177, 177);
   padding:10px;
   border-radius: 2px;
