--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,7 +1,8 @@
 <div id ="container">
    <h1 id="heading">Welcome to Todo App</h1>
+   <p id="para">Make Your Day Organized By Planning Things A Head</p>
 <input type="button" class="btn" id="reg" value="Register" ng-click = "home.goToRegister()" >
-    <input type="button" class="btn" id="log" value="login" ng-click="home.goToLogin()">
+    <input type="button" class="btn" id="log" value="Login" ng-click="home.goToLogin()">
 
 
    <div id="mouth">
