--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,25 +2,34 @@
 #container{
     text-align:center;
     letter-spacing: 4px;
-    margin-top:9%;
+    margin-top:5%;
     height:100%;
     
 }
+#para{
+    letter-spacing: 4px;
+    color:darkblue;
+    font-size:20px;
+    font-weight:bold;
+    margin-bottom:3%;
+}
 #heading{
     color:darkblue;
-    margin-bottom:25px;
+    margin-bottom:15px;
     font-size:45px;
 }
 #reg{
-    margin-right:40px;
+    margin-right:10%;
     padding:10px;
     padding-left:35px;
     padding-right:35px;
     font-weight: bold;
     letter-spacing: 4px;
+    font-size:15px;
 }
 #login{
-    margin-left:40px;
+    margin-left:10%;
+    font-size:15px;
 }
 #log{
     padding:10px;
