--- a/public/css/todo.css
+++ b/public/css/todo.css
@@ -89,10 +89,10 @@
     background-image: linear-gradient(to left,rgb(6, 14, 83), rgb(16, 36, 218));
 }
 #del{
-    float:middle;
+    float:right;
     padding-right:5px;
     color:rgb(245, 79, 79);
-    font-size:40px;
+    font-size:20px;
 }
 .btn:focus{
     color:white;
