adding root index.html file

--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -22,7 +22,7 @@
         </div>
         <div class="form-group">
             <div class="">
-                <input type="button" id="sub" ng-disabled = "registerForm.$invalid" ng-click = "reg.getUserData()" value="Register" class="btn">
+                <input type="button" id="sub"  ng-disabled = "registerForm.$invalid" ng-click = "reg.getUserData()" class = "btn" value="Register" >
             </div>
         </div>
         <span class="error" ng-show = reg.duplicate >Email already Exists <a href="#/login"> Login here </a> </span>
