--- a/public/css/todo.css
+++ b/public/css/todo.css
@@ -80,10 +80,20 @@
     padding:17px 15px;
     box-shadow: 5px 10px #888888;
 }
- 
+ s{
+     color: red;
+     
+ }
+ #te{
+     color:white;
+ }
 .grn{
     background-image:linear-gradient(to left, rgb(2, 54, 9),rgb(7, 145, 26));
     
+}
+.strike{
+    background-color : red;
+    color:black;
 }
 .bl{
     background-image: linear-gradient(to left,rgb(6, 14, 83), rgb(16, 36, 218));
